*Empty MediaWiki Message*

--- a/Бишкек_ош.mw
+++ b/Бишкек_ош.mw
@@ -5,14 +5,14 @@
  |изображение             = E7874-Bishkek-Philharmonic.jpg
  |подчинение              = прявтош
  |мастор                  = Киргизия Мастор
- |герб                    = 
- |коцт                    = 
+ |герб                    = Coat of arms of Bishkek Kyrgyzstan.svg
+ |коцт                    = Flag of Bishkek Kyrgyzstan.svg
  |описание герба          = 
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 42|lat_min = 52|lat_sec = 
+  |lon_dir = |lon_deg = 74|lon_min = 34|lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
@@ -33,29 +33,29 @@
  |дата основания          = 
  |первое упоминание       = 
  |прежние имена           = 
- |статус с                = 
- |покшолмазо              = 
+ |статус с                = 1925 ие
+ |покшолмазо              = 127
  |вид высоты              = 
  |высота центра ЭТ        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 
-  |год переписи           = 
+  |эрицятне               = 923,3 тёжат<ref name="Насел 2015">[http://www.stat.kg/media/statisticsoperational/cfb97050-ad28-455d-acc1-2c384344d7d0.pdf Численность населения областей, районов, городов и поселков городского типа Кыргызской Республики в 2015 г.] постоянное население на 1 января 2015 года, наличное население 953,0 тыс. жителей {{ref-ru}}</ref>   
+  |год переписи           = 2015
   |плотность              = 
   |агломерация            = 
   |национальный состав    = 
   |конфессиональный состав= 
   |этнохороним            = 
- |шкань каркс             = 
+ |шкань каркс             = +6
  |DST                     = 
- |кортавксонь код         = 
+ |кортавксонь код         = +996 312
  |почтовый индекс         = 
- |почтовые индексы        = 
- |автомобильный код       = 
+ |почтовые индексы        = 720001-720083<ref name="Индекст">[http://kyrgyzpost.kg/ru/indeksy/category/bishkek.html Отделения связи. Бишкек]</ref>
+ |автомобильный код       = B, E
  |вид идентификатора      = 
  |цифровой идентификатор  = 
  |категория в Commons     = 
- |сайт                    = 
+ |сайт                    = http://meria.kg
  |язык сайта              = 
 }}
 '''Бишкек''' — те [[Киргизия Мастор|Киргизиянь]] прявтошось.
