*Empty MediaWiki Message*

--- a/Бишкек_ош.mw
+++ b/Бишкек_ош.mw
@@ -36,7 +36,7 @@
  |статус с                = 1925 ие
  |покшолмазо              = 127
  |вид высоты              = 
- |высота центра ЭТ        = 
+ |высота центра ЭТ        = 750—900
  |климат                  = 
  |официальный язык        = 
   |эрицятне               = 923,3 тёжат<ref name="Насел 2015">[http://www.stat.kg/media/statisticsoperational/cfb97050-ad28-455d-acc1-2c384344d7d0.pdf Численность населения областей, районов, городов и поселков городского типа Кыргызской Республики в 2015 г.] постоянное население на 1 января 2015 года, наличное население 953,0 тыс. жителей {{ref-ru}}</ref>   
@@ -56,7 +56,8 @@
  |цифровой идентификатор  = 
  |категория в Commons     = 
  |сайт                    = http://meria.kg
- |язык сайта              = 
+ |язык сайта              = ru
+ |язык сайта2             = ky
 }}
 '''Бишкек''' — те [[Киргизия Мастор|Киргизиянь]] прявтошось.
 
