--- a/2016_ие.mw
+++ b/2016_ие.mw
@@ -6,7 +6,7 @@
 == Чачсть ==
 
 == Кулость ==
-
+* [[Якшамковонь 10 чи]]стэ [[Боуи Дэвид]] - [[Инебритания Мастор|инебританиянь]] рок-морыця
 
 {{Commons|Category:2016|2016}}
 
