*Empty MediaWiki Message*

--- a/Севастополь_ош.mw
+++ b/Севастополь_ош.mw
@@ -1,11 +1,11 @@
-'''Севастополь''' — те [[Россия Мастор|Россия Масторонть]] ошось, федерациянь вейкеть права марто субъект.
+'''Севастополь''' — те ошось Крымень улолангосо. Крым улолангонть седе покш пельксэнть кувалма ней ули пелькстамо Россия Масторонть ютксо, коната кирди эсь кедьвийсэнзэ ало те пельусиянть, ды Украина Мастортнэнь ютксо. [[Россия]] Масторонть админэнь ды модань явтовксонть коряс, Крымень улолангонь пелькстамосо аштиця модатнень лангсо аштить РФ-нь масторпелькстнэ - Крым Раськемасторось ды Севастополь масторонь тешксчисэ аштиця ошось. [[Украина]] Масторонь админэнь ды модань явтовксонть коряс пелькстамонь модатнень лангсо аштить Украина Масторсо аштиця Крым Башка Раськемасторось ды башка аштемасэрьсэ аштиця Севастополь ошось.
 
-Эрицятнеде — 344 479 лом. (2013 ие).
+Эрицятне — 344 479 лом. (2013 ие).
 
 {{Крымэнь федерациянь кужось}}
 
 {{Россия Масторонть масторпелькстнэ}}
 {{stub}}
 
-[[Категория:Россия Масторонть ошт]]
+
 [[Категория:Россия Масторонть масторпелькстнэ]]
