*Empty MediaWiki Message*

--- a/Острогожскоень_буе_(Воронежень_ёнкс).mw
+++ b/Острогожскоень_буе_(Воронежень_ёнкс).mw
@@ -24,7 +24,7 @@
   |Название главы                 = Администрациянь прявт
  |Глава2                          = Паринов Виктор Николаевич
   |Название главы2                = Буень прявт
- | Карта                          = Location of Novousmansky District (Voronezh Oblast).svg
+ | Карта                          = Location of Ostrogozhsky District (Voronezh Oblast).svg
  | Размер карты                   = 
  | Карта административной единицы = 
  | Размер карты ае                = 
