*Empty MediaWiki Message*

--- a/Одусманонь_буе_(Воронежень_ёнкс).mw
+++ b/Одусманонь_буе_(Воронежень_ёнкс).mw
@@ -28,11 +28,11 @@
  | Размер карты                   = 
  | Карта административной единицы = 
  | Размер карты ае                = 
- | Часовой пояс                   = {{MSK+0}}
+ | Шкань каркс                    = {{MSK+0}}
  | Аббревиатура                   = 
  | ISO                            = 
  | FIPS                           = 
- | Телефонный код                 = 47341
+ | Кортавксонь код                = 47341
  | Почтовые индексы               = 
  | Интернет-домен                 = 
  | Код автомобильных номеров      = 36, 136
