--- a/Острогожскоень_буе_(Воронежень_ёнкс).mw
+++ b/Острогожскоень_буе_(Воронежень_ёнкс).mw
@@ -32,7 +32,7 @@
  | Аббревиатура                   = 
  | ISO                            = 
  | FIPS                           = 
- | Телефонный код                 = 47375
+ | Кортавксонь код                = 47375
  | Почтовые индексы               = 
  | Интернет-домен                 = 
  | Код автомобильных номеров      = 36, 136
