/* Воронежень ёнксонь буетне */

--- a/Воронежень_ёнкс.mw
+++ b/Воронежень_ёнкс.mw
@@ -57,7 +57,7 @@ MSKS=0|
 # [[Рамонень буе (Воронежень ёнкс)|Рамонень буе]] -  ({{lang-ru|Рамонский район}})
 # [[Репьёвкань буе (Воронежень ёнкс)|Репьёвкань буе]] -  ({{lang-ru|Репьёвский район}})
 # [[Россошень буе (Воронежень ёнкс)|Россошень буе]] -  ({{lang-ru|Россошанский район}})
-# [[Семилуконь буе (Воронежень ёнкс)|Семилуконь буе]] -  ({{lang-ru|Семилукский район}})
+# [[Семилукинь буе (Воронежень ёнкс)|Семилукинь буе]] -  ({{lang-ru|Семилукский район}})
 # [[Таловоень буе (Воронежень ёнкс)|Таловоень буе]] -  ({{lang-ru|Таловский район}})
 # [[Терновкань буе (Воронежень ёнкс)|Терновкань буе]] -  ({{lang-ru|Терновский район}})
 # [[Хохольскоень буе (Воронежень ёнкс)|Хохольскоень буе]] -  ({{lang-ru|Хохольский район}})
