--- a/Таловоень_буе_(Воронежень_ёнкс).mw
+++ b/Таловоень_буе_(Воронежень_ёнкс).mw
@@ -36,7 +36,7 @@
  | Почтовые индексы               = 
  | Интернет-домен                 = 
  | Код автомобильных номеров      = 36, 136
- | Сайт                           = http://www.taladm.narod.ru/
+ | Сайт                           = http://taladm.ru/
  | Категория в Commons            = 
  | Примечания                     = 
  | Название параметра1            = [[ОКАТО]]
