*Empty MediaWiki Message*

--- a/Терновкань_буе_(Воронежень_ёнкс).mw
+++ b/Терновкань_буе_(Воронежень_ёнкс).mw
@@ -35,7 +35,7 @@
  | Почтовые индексы               = 
  | Интернет-домен                 = 
  | Код автомобильных номеров      = 36, 136
- | Сайт                           = 
+ | Сайт                           = http://www.ternovadmin.ru/
  | Категория в Commons            = 
  | Примечания                     = 
  | Название параметра1            = [[ОКАТО]]
