*Empty MediaWiki Message*

--- a/Терновкань_буе_(Воронежень_ёнкс).mw
+++ b/Терновкань_буе_(Воронежень_ёнкс).mw
@@ -24,7 +24,7 @@
   |Название главы                 = Администрациянь прявт
  |Глава2                          = Кавешников Виктор  Алексеевич
   |Название главы2                = Буень прявт
- | Карта                          = 
+ | Карта                          = Location of Ternovsky District (Voronezh Oblast).svg
  | Карта административной единицы = 
  | Размер карты ае                = 
  | Шкань каркс                    = {{MSK+0}}
