*Empty MediaWiki Message*

--- a/Томбамонь_ёнкс.mw
+++ b/Томбамонь_ёнкс.mw
@@ -29,6 +29,31 @@ MSKS=0|
 
 '''Томбамонь ёнкс''' ({{lang-ru|Тамбовская область}}) — ашти [[Россия Мастор|Россия Масторонь]] куншкань ёнкссо.
 
+== Томбамонь ёнксонь буетне==
+# [[Бондаринь буе (Томбомонь ёнкс)|Бондаринь буе]] — ({{Lang-ru|Бондарский район}})
+# [[Гавриловкань буе (Томбомонь ёнкс)|Гавриловкань буе]] — ({{Lang-ru|Гавриловский район}})
+# [[Жердевкань буе (Томбомонь ёнкс)|Жердевкань буе]] — ({{Lang-ru|Жердевский район}})
+# [[Знаменкань буе |Знаменкань буе]] — ({{Lang-ru|Знаменский район}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+# [[|]] — ({{Lang-ru|}})
+
 {{Куншкань федерациянь кужось}}
 <br clear="all">
 {{Россия Масторонть масторпелькстнэ}}
