/* Томбамонь ёнксонь буетне */

--- a/Томбамонь_ёнкс.mw
+++ b/Томбамонь_ёнкс.mw
@@ -30,29 +30,29 @@ MSKS=0|
 '''Томбамонь ёнкс''' ({{lang-ru|Тамбовская область}}) — ашти [[Россия Мастор|Россия Масторонь]] куншкань ёнкссо.
 
 == Томбамонь ёнксонь буетне==
-# [[Бондаринь буе (Томбомонь ёнкс)|Бондаринь буе]] — ({{Lang-ru|Бондарский район}})
-# [[Гавриловкань буе (Томбомонь ёнкс)|Гавриловкань буе]] — ({{Lang-ru|Гавриловский район}})
-# [[Жердевкань буе (Томбомонь ёнкс)|Жердевкань буе]] — ({{Lang-ru|Жердевский район}})
-# [[Знаменкань буе |Знаменкань буе]] — ({{Lang-ru|Знаменский район}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
-# [[|]] — ({{Lang-ru|}})
+# [[Бондаринь буе (Томбамонь ёнкс)|Бондаринь буе]] — ({{Lang-ru|Бондарский район}})
+# [[Гавриловкань буе (Томбамонь ёнкс)|Гавриловкань буе]] — ({{Lang-ru|Гавриловский район}})
+# [[Жердевкань буе (Томбамонь ёнкс)|Жердевкань буе]] — ({{Lang-ru|Жердевский район}})
+# [[Знаменкань буе (Томбамонь ёнкс)|Знаменкань буе]] — ({{Lang-ru|Знаменский район}})
+# [[Инжавинонь буе (Томбамонь ёнкс)|Инжавинонь буе]] — ({{Lang-ru|Инжавинский район}})
+# [[Кирсановонь буе (Томбамонь ёнкс)|Кирсановонь буе]] — ({{Lang-ru|Кирсановский район}})
+# [[Мичуринскоень буе (Томбамонь ёнкс)|Мичуринскоень буе]] — ({{Lang-ru|Мичуринский район}})
+# [[Мордовонь буе (Томбамонь ёнкс)|Мордовонь буе]] — ({{Lang-ru|Мордовский район}})
+# [[Моршанскоень буе (Томбамонь ёнкс)|Моршанскоень буе]] — ({{Lang-ru|Моршанский район}})
+# [[Мучкапскоень буе (Томбамонь ёнкс)|Мучкапскоень буе]] — ({{Lang-ru|Мучкапский район}})
+# [[Никифоровкань буе (Томбамонь ёнкс)|Никифоровкань буе]] — ({{Lang-ru|Никифоровский район}})
+# [[Первомайскоень буе (Томбамонь ёнкс)|Первомайскоень буе]] — ({{Lang-ru|Первомайский район}})
+# [[Петровскоень буе (Томбамонь ёнкс)|Петровскоень буе]] — ({{Lang-ru|Петровский район}})
+# [[Пичаевонь буе (Томбамонь ёнкс)|Пичаевонь буе]] — ({{Lang-ru|Пичаевский район}})
+# [[Рассказовонь буе (Томбамонь ёнкс)|Рассказовонь буе]] — ({{Lang-ru|Рассказовский район}})
+# [[Ржаксань буе (Томбамонь ёнкс)|Ржаксань буе]] — ({{Lang-ru|Ржаксинский район}})
+# [[Сампуронь буе (Томбамонь ёнкс)|Сампуронь буе]] — ({{Lang-ru|Сампурский район}})
+# [[Сосновкань буе (Томбамонь ёнкс)|Сосновкань буе]] — ({{Lang-ru|Сосновский район}})
+# [[Староюрьевонь буе (Томбамонь ёнкс)|Староюрьевонь буе]] — ({{Lang-ru|Староюрьевский район}})
+# [[Томбамонь буе (Томбамонь ёнкс)|Томбамонь буе]] — ({{Lang-ru|Тамбовский район}})
+# [[Токарёвкань буе (Томбамонь ёнкс)|Токарёвкань буе]] — ({{Lang-ru|Токарёвский район}})
+# [[Уваровонь буе (Томбамонь ёнкс)|Уваровонь буе]] — ({{Lang-ru|Уваровский район}})
+# [[Умётонь буе (Томбамонь ёнкс)|Умётонь буе]] — ({{Lang-ru|Умётский район}})
 
 {{Куншкань федерациянь кужось}}
 <br clear="all">
