*Empty MediaWiki Message*

--- a/Хохольскоень_буе_(Воронежень_ёнкс).mw
+++ b/Хохольскоень_буе_(Воронежень_ёнкс).mw
@@ -41,7 +41,7 @@
  | Название параметра1            = [[ОКАТО]]
  | Параметр1                      = {{ОКАТО|20256000}}
 }}
-'''Хохольскоень буе''' ({{lang-ru|Терновский район}}) ашти [[Воронежень ёнкс]]со. Прявтонь кункшка - [[Хохольской (Воронежень ёнкс)|Хохольской]] веле.
+'''Хохольскоень буе''' ({{lang-ru|Хохольский район}}) ашти [[Воронежень ёнкс]]со. Прявтонь кункшка - [[Хохольской (Воронежень ёнкс)|Хохольской]] веле.
 
 
 {{stub}}
