*Empty MediaWiki Message*

--- a/Никифоровкань_буе_(Томбамонь_ёнкс).mw
+++ b/Никифоровкань_буе_(Томбамонь_ёнкс).mw
@@ -2,7 +2,7 @@
  | Цвет1                          = {{Цвет|Россия}}
  | Эрзянь лем                     = Никифоровкань буе
  | Эсьлем                         = {{lang-ru|Никифоровский район}}
- | Герб                           = 
+ | Герб                           = Coat of Arms of Nikiforovskiy rayon (Tambov oblast).gif
  | Коцт                           = 
  | Гимн                           = 
  | Мастор                         = {{RUS}}
@@ -34,7 +34,7 @@
  | Кортавксонь код                = 47536
  | Почтовые индексы               = 
  | Интернет-домен                 = 
- | Код автомобильных номеров      = 36, 136
+ | Код автомобильных номеров      = 68
  | Сайт                           = http://r36.tambov.gov.ru/
  | Категория в Commons            = 
  | Примечания                     = 
