*Empty MediaWiki Message*

--- a/Никифоровкань_буе_(Томбамонь_ёнкс).mw
+++ b/Никифоровкань_буе_(Томбамонь_ёнкс).mw
@@ -2,7 +2,7 @@
  | Цвет1                          = {{Цвет|Россия}}
  | Эрзянь лем                     = Никифоровкань буе
  | Эсьлем                         = {{lang-ru|Никифоровский район}}
- | Герб                           = Coat of Arms of Nikiforovskiy rayon (Tambov oblast).gif
+ | Герб                           = <!-- Coat of Arms of Nikiforovskiy rayon (Tambov oblast).gif -->
  | Коцт                           = 
  | Гимн                           = 
  | Мастор                         = {{RUS}}
