*Empty MediaWiki Message*

--- a/Гавриловкань_буе_(Томбамонь_ёнкс).mw
+++ b/Гавриловкань_буе_(Томбамонь_ёнкс).mw
@@ -24,7 +24,7 @@
   |Название главы                 = Депутатонь советэнь прявт
  |Глава2                          = Павлов Сергей Александрович
   |Название главы2                = Буень прявт
- | Карта                          = Location of Sosnovsky Region (Tambov Oblast).svg
+ | Карта                          = Location of Gavrilovsky Region (Tambov Oblast).svg
  | Карта административной единицы = 
  | Размер карты ае                = 
  | Шкань каркс                    = {{MSK+0}}
