*Empty MediaWiki Message*

--- a/Жердевкань_буе_(Томбамонь_ёнкс).mw
+++ b/Жердевкань_буе_(Томбамонь_ёнкс).mw
@@ -24,7 +24,7 @@
   |Название главы                 = Администрациянь прявт
  |Глава2                          = 
   |Название главы2                = Буень прявт
- | Карта                          = 
+ | Карта                          = Location of Zherdevsky Region (Tambov Oblast).svg
  | Карта административной единицы = 
  | Размер карты ае                = 
  | Шкань каркс                    = {{MSK+0}}
