--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -40,7 +40,7 @@
  | Название параметра1            = 
  | Параметр1                      = 
 }}
-Меремяэ ({{lang-et|Meremäe}})- те буе [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со. Меремяэ буень прявтонь куншкась - [[Меремяэ]] веле.
+Меремяэ ({{lang-et|Meremäe}}) — те буе [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со. Меремяэ буень прявтонь куншкась — [[Меремяэ]] веле.
 
 
 
