*Empty MediaWiki Message*

--- a/Кирсановонь_буе_(Томбамонь_ёнкс).mw
+++ b/Кирсановонь_буе_(Томбамонь_ёнкс).mw
@@ -24,7 +24,7 @@
   |Название главы                 = Администрациянь прявт
  |Глава2                          = Хатунцев Владимир Александрович
   |Название главы2                = Буень прявт
- | Карта                          = Location of Sosnovsky Region (Tambov Oblast).svg
+ | Карта                          =  Location of Kirsanovsky Region (Tambov Oblast).svg
  | Карта административной единицы = 
  | Размер карты ае                = 
  | Шкань каркс                    = {{MSK+0}}
