*Empty MediaWiki Message*

--- a/Амуронь_ёнкс.mw
+++ b/Амуронь_ёнкс.mw
@@ -7,7 +7,7 @@ FlagLnk=Амуронь ёнксонть коцтось|
 CoALnk=Амуронь ёнксонть гербесь|
 FSMapName=RussiaAmur|
 FSCtrWhat=Прявтош|
-FSCtrNm=[[Благовещенск ош]]|
+FSCtrNm=[[Благовещенской ош]]|
 AreaRnk=14-це|
 TotArea=363 700|
 WaterPrcnt=0,9|
