Отмена правки 80218, сделанной участником [[Special:Contribs/GelioNvsb|GelioNvsb]] ([[User talk:GelioNvsb|обс.]])

--- a/Воронеж_ош.mw
+++ b/Воронеж_ош.mw
@@ -2,7 +2,7 @@
  |статус                  = Ош
  |Эрзянь лем              = Воронеж ош
  |оригинальное название   = Воронеж
- |изображение             = Vrncentr2.jpg
+ |изображение             = Главное здание управления ЮВЖД.jpg
  |подчинение              = 
  |мастор                  = Россия
  |герб                    = Coat of arms of Voronezh.png
