*Empty MediaWiki Message*

--- a/Острова_(Меремяэ_буе).mw
+++ b/Острова_(Меремяэ_буе).mw
@@ -1,4 +1,4 @@
-{{Лия смустьтне|Меремяэ (смустьтне)}}
+{{Лия смустьтне|Острова (смустьтне)}}
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Острова
@@ -41,7 +41,7 @@
  |климат                  = 
  |официальный язык        = 
   |эрицятне               = 1
-  |год переписи           = 2012
+  |год переписи           = 2011
   |плотность              = 
   |агломерация            = 
   |национальный состав    = 
