*Empty MediaWiki Message*

--- a/Острова_(Меремяэ_буе).mw
+++ b/Острова_(Меремяэ_буе).mw
@@ -59,9 +59,9 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Острова''' ({{lang-et|Ostrova}})- те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со
+'''Острова''' ({{lang-et|Ostrova}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со
 
 
-
+{{stub}}
 [[Категория:Эстэнь Мастор]]
 [[Категория:Эстэнь Масторонть велеть]]
