*Empty MediaWiki Message*

--- a/Острова_(Меремяэ_буе).mw
+++ b/Острова_(Меремяэ_буе).mw
@@ -48,7 +48,7 @@
   |конфессиональный состав= 
   |этнохороним            = 
  |шкань каркс             = +2
- |DST                     = 
+ |DST                     = +1
  |телефонный код          = 
  |почтовый индекс         = 
  |почтовые индексы        = 65322
