*Empty MediaWiki Message*

--- a/Меремяэ.mw
+++ b/Меремяэ.mw
@@ -62,6 +62,6 @@
 '''Меремяэ''' ({{lang-et|Meremäe}})- те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со, [[Меремяэ буе]]нь прявтонь куншкась.
 
 
-
+{{Меремяэнь вельтне}}
 [[Категория:Эстэнь Мастор]]
 [[Категория:Эстэнь Масторонть велеть]]
