*Empty MediaWiki Message*

--- a/Острова_(Меремяэ_буе).mw
+++ b/Острова_(Меремяэ_буе).mw
@@ -59,7 +59,8 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Острова''' ({{lang-et|Ostrova}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со
+'''Острова''' ({{lang-et|Ostrova}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со.
+{{Меремяэнь вельтне}}
 
 
 {{stub}}
