*Empty MediaWiki Message*

--- a/Вяйко-Серга_(Меремяэ_буе).mw
+++ b/Вяйко-Серга_(Меремяэ_буе).mw
@@ -59,6 +59,6 @@
  |язык сайта              = 
 }}
 '''Вайко-Серга''' ({{lang-et|Väiko-Serga}})- те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со
-
+{{Меремяэнь вельтне}}
 [[Категория:Эстэнь Мастор]]
 [[Категория:Эстэнь Масторонть велеть]]
