/* Чачсть */ * [[1929]] — [[Втулкин, Михаил Алексеевич]], [[Эрзя|эрзянь]] валморонь ладсийть, куляньсёрмадей, сёрмадей.

--- a/Эйзюрковонь_24_чи.mw
+++ b/Эйзюрковонь_24_чи.mw
@@ -14,6 +14,7 @@
 
 == Чачсть ==
 ''Вн. истяжо: [[:Категория:Чачозь эйзюрковонь 24 чи]]''
+* [[1929]] — [[Втулкин, Михаил Алексеевич]], [[Эрзя|эрзянь]] валморонь ладсийть, куляньсёрмадей, сёрмадей.
 
 == Кулость ==
 ''Вн. истяжо: [[:Категория:Кулозь эйзюрковонь 24 чи]]''
