/* Кулость */ * [[1991]] — [[Втулкин, Михаил Алексеевич]], [[Эрзя|эрзянь]] валморонь ладсийть, куляньсёрмадей, сёрмадей.

--- a/Умарьковонь_16_чи.mw
+++ b/Умарьковонь_16_чи.mw
@@ -17,6 +17,7 @@
 
 == Кулость ==
 ''Вн. истяжо: [[:Категория:Кулозь умарьковонь 16 чи]]''
+* [[1991]] — [[Втулкин, Михаил Алексеевич]], [[Эрзя|эрзянь]] валморонь ладсийть, куляньсёрмадей, сёрмадей.
 
 {{commons|August 16|умарьковонь 16 чи}}
 
