--- a/Эйзюрковонь_5_чи.mw
+++ b/Эйзюрковонь_5_чи.mw
@@ -17,6 +17,7 @@
 
 == Кулость ==
 ''Вн. истяжо: [[:Категория:Кулозь эйзюрковонь 5]]''
+* [[1943]] — [[Агеев, Евгений Иванович]], [[Эрзя|эрзянь]] сёрмадей.
 
 {{commons|March 5|эйзюрковонь 5 чи}}
 
