/* Чачсть */ * [[1922]] — [[Агеев, Евгений Иванович]], [[Эрзя|эрзянь]] сёрмадей.

--- a/Якшамковонь_16_чи.mw
+++ b/Якшамковонь_16_чи.mw
@@ -14,6 +14,7 @@
 
 == Чачсть ==
 ''Вн. истяжо: [[:Категория:Чачозь якшамковонь 16 чи]]''
+* [[1922]] — [[Агеев, Евгений Иванович]], [[Эрзя|эрзянь]] сёрмадей.
 
 == Кулость ==
 ''Вн. истяжо: [[:Категория:Кулозь якшамковонь 16 чи]]''
