*Empty MediaWiki Message*

--- a/Вырумаа_ёнкс.mw
+++ b/Вырумаа_ёнкс.mw
@@ -93,7 +93,7 @@
 * [[Антсла (буе)|Антсла]] (Антсла ошосьгак сови)
 * [[Хаанья (буе)|Хаанья]]
 * [[Ласва (буе)|Ласва]]
-* [[Меремяэ (буе)|Меремяэ]]
+* [[Меремяэ буе|Меремяэ]]
 * [[Миссо (буе)|Миссо]]
 * [[Мынисте (буе)|Мынисте]]
 * [[Рыуге (буе)|Рыуге]]
