*Empty MediaWiki Message*

--- a/Меремяэ.mw
+++ b/Меремяэ.mw
@@ -47,8 +47,8 @@
   |национальный состав    = 
   |конфессиональный состав= 
   |этнохороним            = 
- |шкань каркс             = 
- |DST                     = 
+ |шкань каркс             = +2
+ |DST                     = +1
  |телефонный код          = 
  |почтовый индекс         = 
  |почтовые индексы        = 
