*Empty MediaWiki Message*

--- a/Ала-Тсумба_(Меремяэ_буе).mw
+++ b/Ала-Тсумба_(Меремяэ_буе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Меремяэ''' ({{lang-et|Meremäe}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со, [[Меремяэ буе]]нь прявтонь куншкась.
+'''Ала-Тсумба''' ({{lang-et|Ala-Tsumba}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со.
 
 
 {{Меремяэнь вельтне}}
