--- a/Ала-Тсумба_(Меремяэ_буе).mw
+++ b/Ала-Тсумба_(Меремяэ_буе).mw
@@ -39,7 +39,7 @@
  |высота центра ЭТ        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 2
+  |эрицятне               = 2<ref name=2011census>{{cite web|title=Population by place of residence (settlement), sex and age|url=http://pub.stat.ee/px-web.2001/Dialog/varval.asp?ma=PC003&lang=1|publisher=[[Statistics Estonia]]|accessdate=|date=31 December 2011}} {{ref-en}}</ref>
   |год переписи           = 2011
   |плотность              = 
   |агломерация            = 
@@ -59,6 +59,9 @@
  |язык сайта              = 
 }}
 '''Ала-Тсумба''' ({{lang-et|Ala-Tsumba}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со.
+
+==Сёрм.==
+<references />
 
 
 {{Меремяэнь вельтне}}
