*Empty MediaWiki Message*

--- a/Азотонь_алокурось.mw
+++ b/Азотонь_алокурось.mw
@@ -1,8 +1,4 @@
-{{Периодонь таблицась элемент|view=center|number=7|fontsize=100%}}
-{{Периодонь таблицась элемент|view=center|number=15|fontsize=100%}}
+Пниктогенонь (азотонь алокурось): те азот, фосфор, мышьяк, сурьма, висмут, унунпептий.{{Периодонь таблицась элемент|view=center|number=7|fontsize=100%}}Азот (7) те типик неметалл.{{Периодонь таблицась элемент|view=center|number=15|fontsize=100%}}
 {{Периодонь таблицась элемент|view=center|number=33|fontsize=100%}}
 {{Периодонь таблицась элемент|view=center|number=51|fontsize=100%}}
-{{Периодонь таблицась элемент|view=center|number=83|fontsize=100%}}
-{{Периодонь таблицась элемент|view=center|number=115|fontsize=100%}}
-
-{{Периодонь таблицась}}
+{{Периодонь таблицась элемент|view=center|number=83|fontsize=100%}}Висмут (83) те типик металл.{{Периодонь таблицась элемент|view=center|number=115|fontsize=100%}}Унунпептий (115) те типик металл (TBA).{{Периодонь таблицась}}
