*Empty MediaWiki Message*

--- a/Обиница_(Меремяэ_буе).mw
+++ b/Обиница_(Меремяэ_буе).mw
@@ -61,7 +61,8 @@
 '''Обиница''' ({{lang-et|Obinitsa}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со.
 {{Меремяэнь вельтне}}
 
-
+==Сёрм. ==
+<references />
 {{stub}}
 [[Категория:Эстэнь Мастор]]
 [[Категория:Эстэнь Масторонть велеть]]
