*Empty MediaWiki Message*

--- a/Ермакова_(Меремяэ_буе).mw
+++ b/Ермакова_(Меремяэ_буе).mw
@@ -18,9 +18,9 @@
  |размер карты страны     = 
  |размер карты региона    = 
  |размер карты района     = 
- |вид региона             = 
- |регион                  = 
- |регион в таблице        = 
+ |вид региона             = буе
+ |регион                  = Меремяэ буе{{!}}Меремяэ
+ |регион в таблице        = Меремяэ буе{{!}}Меремяэ
  |вид района              = 
  |район                   = 
  |район в таблице         = 
