new file, 'Kostroma jonks flag-2006.gif' was deleted

--- a/Костромань_ёнкс.mw
+++ b/Костромань_ёнкс.mw
@@ -1,7 +1,7 @@
 {{Россия Масторонть субъект|
 Лем=Костромань ёнкс|
 РЛ=Костромская область|
-Коцт=[[Артовкс:Kostroma_jonks_flag-2006.gif|160px|Костромань ёнксонть коцт]]|
+Коцт=[[Артовкс:Flag of Kostroma Oblast.svg|160px|Костромань ёнксонть коцт]]|
 FSCoA=[[Артовкс:Coat_of_arms_of_Kostroma_oblast.png|160px|Костромань ёнксонть герб]]|
 FlagLnk=Костромань ёнксонть коцтось|
 CoALnk=Костромань ёнксонть гербесь|
