--- a/Эйзюрков.mw
+++ b/Эйзюрков.mw
@@ -12,7 +12,7 @@
 
 === Россиянь Масторсо ===
 * [[Эйзюрковонь 8 чи]] — Омбомасторонь авань чи
-* [[Эйзюрковонь 14 чи]] — «пи» ловноманть Чи
+* [[Эйзюрковонь 14 чи]] — «пи» ловноманть Чи.
 
 === Эрзянь ===
 * [[Эйзюрковонь 4 чи]] — Эрзянь ушмантне кирдесть изнявкс Муромонь Ярославонть Святославиченть лангсо
