Отмена правки 80313, сделанной участником [[Special:Contribs/31.135.129.12|31.135.129.12]] ([[User talk:31.135.129.12|обс.]])

--- a/Тюштя.mw
+++ b/Тюштя.mw
@@ -3,7 +3,9 @@
 '''Тюштя (Тюштян)''' — [[Эрзя|эрзянь]] [[инязоро]], васенце эрзянь пазмариенек.
 
 == Кие сон ульнесь ==
-Валморотнесэ-мифтнесэ ды эпостнэсэ, конат улить эрзятнень, кортамось моли Тюштядо кода васень эрзянь инязордо. Плаер Чар этэ тупе пидарасе и пише некрасев коде. Он дойт свий хуй на Камку Ассасинясь и плаче.
+Валморотнесэ-мифтнесэ ды эпостнэсэ, конат улить эрзятнень, кортамось моли Тюштядо кода васень эрзянь инязордо. Не моротнень лейтмотивесь — эрзянь кирдиця инязоронть кочкамось. Те ине таркантень арыця ломанесь аволь кодамояк пульки-понкс ломань, сон
+«мода лангсо сехте сюпав, менель ало сехте козяв», сон пек виев «сисем сабансо, комсьвейкее лишмесэ Тюштянь соки», сонзэ «[[Кшни|кшнинь]] кочкарянзо, кевень пря касмозо, уськсэ тапарязь куманжанзо, конястонзо лиси чись, 
+копорьстэнзэ — валдо [[Ков (Моданть ки лангонь ялага)|ковось]], пря чертнень пева — тештинеть»<ref>Paasonen 1938: 60-74, 82-99.</ref>
  
 === Моросо кадовсь лемезэ ===
 Сехте кезэрень морось Тюштядо кадовсь эрьва эрзянь велесэ, сонзэ эйсэ эрзятне панжить озксост, озноматнень, покш читнень:
