--- a/Кизэ_(шкань_вал).mw
+++ b/Кизэ_(шкань_вал).mw
@@ -1,3 +1,4 @@
+{{Лия смустьтне|Кизэ (смустьтне)}}
 '''Ки́зэ''' — [[Ие|иенть]] шка вейке [[4 (ниле)|нилетьнестэ]], ашти [[Тундо|тундонть]] ды [[Сёксь|сёксенть]] ютксо.
 
 Кизэсь ашти [[3 (колмо)|3]] [[Ков|ковсто]]: пелевеёнксонь мастортнева — [[Аштемков|аштемковсто]], [[Медьков|медьковсто]] ды [[Умарьков|умарьковсто]], лембе ёнксонь мастортнева — [[Ацамков|ацамковсто]], [[Якшамков|якшамковсто]] ды [[Даволков|даволковсто]]. 
