*Empty MediaWiki Message*

--- a/Кизатя_(паз).mw
+++ b/Кизатя_(паз).mw
@@ -1,3 +1,4 @@
+{{Лия смустьтне|Кизэ (смустьтне)}}
 '''Ки́затя (паз)''' — те [[Эрзя|эрзянь]] менелень паз; [[Кизэ (паз)|Кизе пазаванть]] мирдезэ. 
 
 Кизатя валось лиси [[2 (кавто)|кавто]] валтнень эйстэ — ''[[Кизэ|«кизэ»]]'' ды ''[[Атя|«атя»]].''
