*Empty MediaWiki Message*

--- a/Обиница_(Меремяэ_буе).mw
+++ b/Обиница_(Меремяэ_буе).mw
@@ -60,7 +60,7 @@
 }}
 '''Обиница''' ({{lang-et|Obinitsa}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со.
 
-[[Артовкс:Grupifoto Obinitsas.JPG|thumb|350px| Умарьковонь 1-4 читнестэ ютась суоми-угрань вики-семинар. Васеньце важодема чись ушодовсь Обиницясто]]
+[[Артовкс:Grupifoto Obinitsas.JPG|thumb|350px|2015 иень умарьковонь 1-4 читнестэ ютась II суоми-угрань вики-семинар. Васеньце важодема чись ушодовсь Обиницясто.]]
 
 ==Сёрм. ==
 <references />
