*Empty MediaWiki Message*

--- a/Эрзятнень_раськень_коцт.mw
+++ b/Эрзятнень_раськень_коцт.mw
@@ -8,8 +8,6 @@
 Колмо тюстнэ коцтсонть — те ломанень эрямозо, чачомасто саезь ды Тоначив туемас. [[Раужо]]сь – те аволь ансяк модань тюсозо, те [[пулай|пулаень]] тюсось. Минек покштятнень-аватнень коряс раужось те  - [[Модава]]сь, сон аваломанень ушодкс, кона рашты од эрямо, сонзэ смустезэ «эрзянь масторось», кона минек анды, максы вий. Эрзятнень те – Паксява, а седе келейстэ чарькодемасо – Масторава, те Тиринь Мастор. [[Якстере]] тюсонть смустезэ – те эрзянь ломанень [[верь|верезэ]], эрзя раськенть эрямозо. Те покштятне-пакшаватне, конат рисьменть вельде максызь миненек эрямонть. Те минь, минек келенек, коенек, кирданок. [[Ашо]] тюсось – Инешкипазонь тёкшозо. Смустень коряс – те олячи, кона максы тенек вий, оймень марямо.  
 
 == Коцтонть тевс нолдыть==
-[[File:Erzya ethnic flag Obnitca.JPG|350px|thumb|Эрзянь раськень коцтось [[Обиница веле]]сэ, [[Меремяэ буе]]сэ, [[Эстэнь Мастор]]. [[2015 ие]]нь [[умарьковонь 1 чи]]стэ тесэ кочкасть Сето раськень инязор/ава. Сакшность эрьва ёндо [[суоми-угрань раськеть]].]]
-
 Покшчитне, зярдо эрзятне  понгавтнить раськень коцтонть(ульнесть кемекстазь Эрзянь Ине Кужосо<ref name="Инекужо"/>:
 * [[Чадыковонь 16 чи]] — Эрзянь Келень Чи. Те чись ульнесь путозь [[Рябовонь, Анатолий Павлович| Анатолий Рябовонь]] чачома чистэнзэ.
 * Велень озкссто - эрьва иень (Раськень Озксонь ютавтомань иетнеде башка) - медьковонь омбоце таргочи 
@@ -18,6 +16,10 @@
 * Эрзянь лисьмапря - эрьва иень медьковонь колмоце таргочи
 * [[Даволковонь 25 чи]]  — Масторавань Чи
 
+<gallery>
+Erzya ethnic flag Obnitca.JPG|350px|Эрзянь раськень коцтось [[Обиница (Меремяэ буе)|Обиница веле]]сэ, [[Меремяэ буе]]сэ, [[Эстэнь Мастор]]. [[2015 ие]]нь [[умарьковонь 1 чи]]стэ тесэ кочкасть Сето раськень инязор/ава. Сакшность эрьва ёндо [[суоми-угрань раськеть]].
+Grupifoto Obinitsas.JPG|thumb|350px|2015 иень умарьковонь 1 чистэ ушодызеть важодеманзо II Cуоми-угрань вики-семинарось. Фотокувось теезь [[Обиница (Меремяэ буе)|Обиницясо]], веси раськекоцтнень вакссо.
+</gallery>
 
 Седе тов, косо эрзятне а пурнавить, сынь невтить эсест раськень коцтонть<ref> [http://uralistica.com/group/5555/forum/topics/priezzhajte-erzyane-podnimut  Флаг Эрзя народа на Грушинском фестивале] {{ref-ru}}</ref><ref> [http://ok.ru/teschnyar/topic/62190817621394 Тешнерь велесо кепедсть эрзянь раскень коцт!] {{ref-ru}}, {{ref-myv}}</ref><ref> [http://erzyaks.ru/yerzyanskaya-delegaciya-nachala-rabotu-na/ Эрзянская делегация начала работу на конгрессе МАФУН] {{ref-ru}}</ref>.
 
