*Empty MediaWiki Message*

--- a/Обиница_(Меремяэ_буе).mw
+++ b/Обиница_(Меремяэ_буе).mw
@@ -60,7 +60,15 @@
 }}
 '''Обиница''' ({{lang-et|Obinitsa}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со.
 
-[[Артовкс:Grupifoto Obinitsas.JPG|thumb|350px|2015 иень умарьковонь 1-4 читнестэ ютась II суоми-угрань вики-семинар. Васеньце важодема чись ушодовсь Обиницясто.]]
+==Фотокувт==
+<gallery>
+Obinitsa tsässon 2013 sügis.JPG|Обиницясо
+Obinitsa lauluema monument 2013 sügis.JPG|Сетонь Моро аванень путозь кеврунгось
+Obinitsa muuseum 2013 sügis.JPG|Обиницань музеесь
+Soome-ugri kultuuripealinn 2015 logo.jpg|2015 иень Суоми-угрань Шкинемань Прявтош
+Obinitsa_lipud.JPG|Суоми-угрань раськетьнень коцтост Обиницясо
+Grupifoto Obinitsas.JPG|2015 иень умарьковонь 1-4 читнестэ ютась II суоми-угрань вики-семинар. Васеньце важодема чись ушодовсь Обиницясто.
+</gallery>
 
 ==Сёрм. ==
 <references />
