--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -121,7 +121,7 @@
 * [[Тоброва (Меремяэ буе)|Тоброва]] — ({{lang-et|Tobrova}})
 * [[Треиали (Меремяэ буе)|Треиали]] — ({{lang-et|Treiali}})
 * [[Тригиня (Меремяэ буе)|Тригиня]] — ({{lang-et|Triginä}})
-* [[Тсергондё (Меремяэ буе)|Тсергондё]] — ({{lang-et|Tsergondõ}})
+* [[Тсергонды (Меремяэ буе)|Тсергонды]] — ({{lang-et|Tsergondõ}})
 * [[Тсиргу (Меремяэ буе)|Тсиргу]] — ({{lang-et|Tsirgu}})
 * [[Тсюмба (Меремяэ буе)|Тсюмба]] — ({{lang-et|Tsumba}})
 * [[Туплова (Меремяэ буе)|Туплова]] — ({{lang-et|Tuplova}})
@@ -129,7 +129,7 @@
 * [[Тяяглова (Меремяэ буе)|Тяяглова]] — ({{lang-et|Tääglova}})
 * [[Уласкова (Меремяэ буе)|Уласкова]] — ({{lang-et|Ulaskova}})
 * [[Уусвада (Меремяэ буе)|Уусвада]] — ({{lang-et|Uusvada}})
-* [[Вааксаарё (Меремяэ буе)|Вааксаарё]] — ({{lang-et|Vaaksaarõ}})
+* [[Вааксаары (Меремяэ буе)|Вааксаары]] — ({{lang-et|Vaaksaarõ}})
 * [[Васла (Меремяэ буе)|Васла]] — ({{lang-et|Vasla}})
 * [[Веретина (Меремяэ буе)|Веретина]] — ({{lang-et|Veretinä}})
 * [[Вински (Меремяэ буе)|Вински]] — ({{lang-et|Vinski}})
