--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -72,7 +72,7 @@
 * [[Китсё (Меремяэ буе)|Китсё]] — ({{lang-et|Kitsõ}})
 * [[Клистина (Меремяэ буе)|Клистина]] — ({{lang-et|Klistina}})
 * [[Корски (Меремяэ буе)|Корски]] — ({{lang-et|Korski}})
-* [[Куигё (Меремяэ буе)|Куигё]] — ({{lang-et|Kuigõ}})
+* [[Куигы (Меремяэ буе)|Куигы]] — ({{lang-et|Kuigõ}})
 * [[Куксина (Меремяэ буе)|Куксина]] — ({{lang-et|Kuksina}})
 * [[Куснетцова (Меремяэ буе)|Куснетцова]] — ({{lang-et|Kusnetsova}})
 * [[Кёёру (Меремяэ буе)|Кёёру]] — ({{lang-et|Kõõru}})
@@ -90,12 +90,12 @@
 * [[Меремяэ]] — ({{lang-et|Meremäe}})
 * [[Мииксе (Меремяэ буе)|Мииксе]] — ({{lang-et|Miikse}})
 * [[Мику (Меремяэ буе)|Мику]] — ({{lang-et|Miku}})
-* [[Навикё (Меремяэ буе)|Навикё]] — ({{lang-et|Navikõ}})
+* [[Навикы (Меремяэ буе)|Навикы]] — ({{lang-et|Navikõ}})
 * [[Обиница (Меремяэ буе)|Обиница]] — ({{lang-et|Obinitsa}})
 * [[Олехковка (Меремяэ буе)|Олехковка]] — ({{lang-et|Olehkova}})
 * [[Острова (Меремяэ буе)|Острова]] — ({{lang-et|Ostrova}})
 * [[Паклова (Меремяэ буе)|Паклова]] — ({{lang-et|Paklova}})
-* [[Паландё (Меремяэ буе)|Паландё]] — ({{lang-et|Palandõ}})
+* [[Паланды (Меремяэ буе)|Паланды]] — ({{lang-et|Palandõ}})
 * [[Пало (Меремяэ буе)|Пало]] — ({{lang-et|Palo}})
 * [[Паловеерэ (Меремяэ буе)|Паловеерэ]] — ({{lang-et|Paloveere}})
 * [[Пелси (Меремяэ буе)|Пелси]] — ({{lang-et|Pelsi}})
