*Empty MediaWiki Message*

--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -56,7 +56,7 @@
 * [[Хиллякестэ (Меремяэ буе)|Хиллякестэ]] — ({{lang-et|Hilläkeste}})
 * [[Холди (Меремяэ буе)|Холди]] — ({{lang-et|Holdi}})
 * [[Хярмя (Меремяэ буе)|Хярмя]] — ({{lang-et|Härmä}})
-* [[Игнасё (Меремяэ буе)|Игнасё]] — ({{lang-et|Ignasõ}})
+* [[Игнасы (Меремяэ буе)|Игнасы]] — ({{lang-et|Ignasõ}})
 * [[Йаанимаэ (Меремяэ буе)|Йаанимаэ]] — ({{lang-et|Jaanimäe}})
 * [[Йууса (Меремяэ буе)|Йууса]] — ({{lang-et|Juusa}})
 * [[Йёкси (Меремяэ буе)|Йёкси]] — ({{lang-et|Jõksi}})
@@ -69,7 +69,7 @@
 * [[Кииова (Меремяэ буе)|Кииова]] — ({{lang-et|Kiiova}})
 * [[Киислова (Меремяэ буе)|Киислова]] — ({{lang-et|Kiislova}})
 * [[Киксова (Меремяэ буе)|Киксова]] — ({{lang-et|Kiksova}})
-* [[Китсё (Меремяэ буе)|Китсё]] — ({{lang-et|Kitsõ}})
+* [[Китсы (Меремяэ буе)|Китсы]] — ({{lang-et|Kitsõ}})
 * [[Клистина (Меремяэ буе)|Клистина]] — ({{lang-et|Klistina}})
 * [[Корски (Меремяэ буе)|Корски]] — ({{lang-et|Korski}})
 * [[Куигы (Меремяэ буе)|Куигы]] — ({{lang-et|Kuigõ}})
