--- a/ЛопаПарцун:Меремяэнь_вельтне.mw
+++ b/ЛопаПарцун:Меремяэнь_вельтне.mw
@@ -12,7 +12,7 @@
 {{•}}  [[Хиллякестэ (Меремяэ буе)|Хиллякестэ]] 
 {{•}}  [[Холди (Меремяэ буе)|Холди]] 
 {{•}}  [[Хярмя (Меремяэ буе)|Хярмя]] 
-{{•}}  [[Игнасё (Меремяэ буе)|Игнасё]] 
+{{•}}  [[Игнасы (Меремяэ буе)|Игнасы]] 
 {{•}}  [[Йаанимаэ (Меремяэ буе)|Йаанимаэ]] 
 {{•}}  [[Йууса (Меремяэ буе)|Йууса]] 
 {{•}}  [[Йёкси (Меремяэ буе)|Йёкси]] 
@@ -25,10 +25,10 @@
 {{•}}  [[Кииова (Меремяэ буе)|Кииова]] 
 {{•}}  [[Киислова (Меремяэ буе)|Киислова]] 
 {{•}}  [[Киксова (Меремяэ буе)|Киксова]] 
-{{•}}  [[Китсё (Меремяэ буе)|Китсё]] 
+{{•}}  [[Китсы (Меремяэ буе)|Китсы]] 
 {{•}}  [[Клистина (Меремяэ буе)|Клистина]] 
 {{•}}  [[Корски (Меремяэ буе)|Корски]] 
-{{•}}  [[Куигё (Меремяэ буе)|Куигё]]
+{{•}}  [[Куигы (Меремяэ буе)|Куигы]]
 {{•}}  [[Куксина (Меремяэ буе)|Куксина]] 
 {{•}}  [[Куснетцова (Меремяэ буе)|Куснетцова]] 
 {{•}}  [[Кёёру (Меремяэ буе)|Кёёру]]
@@ -45,12 +45,12 @@
 {{•}}  [[Меремяэ]]
 {{•}}  [[Мииксе (Меремяэ буе)|Мииксе]]
 {{•}}  [[Мику (Меремяэ буе)|Мику]] 
-{{•}}  [[Навикё (Меремяэ буе)|Навикё]] 
+{{•}}  [[Навикы (Меремяэ буе)|Навикы]] 
 {{•}}  [[Обиница (Меремяэ буе)|Обиница]]
 {{•}}  [[Олехковка (Меремяэ буе)|Олехковка]] 
 {{•}}  [[Острова (Меремяэ буе)|Острова]] 
 {{•}}  [[Паклова (Меремяэ буе)|Паклова]] 
-{{•}}  [[Паландё (Меремяэ буе)|Паландё]] 
+{{•}}  [[Паланды (Меремяэ буе)|Паланды]] 
 {{•}}  [[Пало (Меремяэ буе)|Пало]] 
 {{•}}  [[Паловеерэ (Меремяэ буе)|Паловеерэ]] 
 {{•}}  [[Пелси (Меремяэ буе)|Пелси]] 
@@ -71,11 +71,11 @@
 {{•}}  [[Тессова (Меремяэ буе)|Тессова]] 
 {{•}}  [[Тетерювья (Меремяэ буе)|Тетерювья]] 
 {{•}}  [[Тиирханна (Меремяэ буе)|Тиирханна]] 
-{{•}}  [[Тикласё (Меремяэ буе)|Тикласё]]
+{{•}}  [[Тикласы (Меремяэ буе)|Тикласы]]
 {{•}}  [[Тоброва (Меремяэ буе)|Тоброва]] 
 {{•}}  [[Треиали (Меремяэ буе)|Треиали]] 
 {{•}}  [[Тригиня (Меремяэ буе)|Тригиня]] 
-{{•}}  [[Тсергондё (Меремяэ буе)|Тсергондё]] 
+{{•}}  [[Тсергонды (Меремяэ буе)|Тсергонды]] 
 {{•}}  [[Тсиргу (Меремяэ буе)|Тсиргу]] 
 {{•}}  [[Тсюмба (Меремяэ буе)|Тсюмба]] 
 {{•}}  [[Туплова (Меремяэ буе)|Туплова]] 
@@ -83,7 +83,7 @@
 {{•}}  [[Тяяглова (Меремяэ буе)|Тяяглова]] 
 {{•}}  [[Уласкова (Меремяэ буе)|Уласкова]] 
 {{•}}  [[Уусвада (Меремяэ буе)|Уусвада]] 
-{{•}}  [[Вааксаарё (Меремяэ буе)|Вааксаарё]] 
+{{•}}  [[Вааксаары (Меремяэ буе)|Вааксаары]] 
 {{•}}  [[Васла (Меремяэ буе)|Васла]] 
 {{•}}  [[Веретина (Меремяэ буе)|Веретина]]
 {{•}}  [[Вински (Меремяэ буе)|Вински]] 
