*Empty MediaWiki Message*

--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -59,7 +59,7 @@
 * [[Игнасы (Меремяэ буе)|Игнасы]] — ({{lang-et|Ignasõ}})
 * [[Йаанимаэ (Меремяэ буе)|Йаанимаэ]] — ({{lang-et|Jaanimäe}})
 * [[Йууса (Меремяэ буе)|Йууса]] — ({{lang-et|Juusa}})
-* [[Йёкси (Меремяэ буе)|Йёкси]] — ({{lang-et|Jõksi}})
+* [[Йыкси (Меремяэ буе)|Йыкси]] — ({{lang-et|Jõksi}})
 * [[Калатсова (Меремяэ буе)|Калатсова]] — ({{lang-et|Kalatsova}})
 * [[Кангавитса (Меремяэ буе)|Кангавитса]] — ({{lang-et|Kangavitsa}})
 * [[Карамсина (Меремяэ буе)|Карамсина]] — ({{lang-et|Karamsina}})
