*Empty MediaWiki Message*

--- a/ЛопаПарцун:Меремяэнь_вельтне.mw
+++ b/ЛопаПарцун:Меремяэнь_вельтне.mw
@@ -15,7 +15,7 @@
 {{•}}  [[Игнасы (Меремяэ буе)|Игнасы]] 
 {{•}}  [[Йаанимаэ (Меремяэ буе)|Йаанимаэ]] 
 {{•}}  [[Йууса (Меремяэ буе)|Йууса]] 
-{{•}}  [[Йёкси (Меремяэ буе)|Йёкси]] 
+{{•}}  [[Йыкси (Меремяэ буе)|Йыкси]] 
 {{•}}  [[Калатсова (Меремяэ буе)|Калатсова]] 
 {{•}}  [[Кангавитса (Меремяэ буе)|Кангавитса]] 
 {{•}}  [[Карамсина (Меремяэ буе)|Карамсина]] 
