--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -134,7 +134,7 @@
 * [[Веретина (Меремяэ буе)|Веретина]] — ({{lang-et|Veretinä}})
 * [[Вински (Меремяэ буе)|Вински]] — ({{lang-et|Vinski}})
 * [[Выро (Меремяэ буе)|Выро]] — ({{lang-et|Viro}})
-* [[Вёмморски (Меремяэ буе)|Вёмморски]] — ({{lang-et|Võmmorski}})
+* [[Вымморски (Меремяэ буе)|Вымморски]] — ({{lang-et|Võmmorski}})
 * [[Вайко-Хярма (Меремяэ буе)|Вайко-Хярма]] — ({{lang-et|Väiko-Härmä}})
 * [[Вайко-Серга (Меремяэ буе)|Вайко-Серга]] — ({{lang-et|Väiko-Serga}})
 |}
