*Empty MediaWiki Message*

--- a/ЛопаПарцун:Меремяэнь_вельтне.mw
+++ b/ЛопаПарцун:Меремяэнь_вельтне.mw
@@ -88,7 +88,7 @@
 {{•}}  [[Веретина (Меремяэ буе)|Веретина]]
 {{•}}  [[Вински (Меремяэ буе)|Вински]] 
 {{•}}  [[Выро (Меремяэ буе)|Выро]]
-{{•}}  [[Вёмморски (Меремяэ буе)|Вёмморски]]
+{{•}}  [[Вымморски (Меремяэ буе)|Вымморски]]
 {{•}}  [[Вайко-Хярма (Меремяэ буе)|Вайко-Хярма]] 
 {{•}}  [[Вайко-Серга (Меремяэ буе)|Вайко-Серга]]
 }}<noinclude>
