*Empty MediaWiki Message*

--- a/Обамань_Барак.mw
+++ b/Обамань_Барак.mw
@@ -2,8 +2,8 @@
 {{Ломанесь
  |лем                  = Обамань Барак
  |оригинальной лем      = 
- |чачома лем         = Barack Hussein Obama II
- |артовкс            = Official portrait of Barack Obama.jpg  
+ |чачома лем         = Barack Obama
+ |артовкс            = President_Barack_Obama.jpg 
  |артовксонть покшолмазо   = 
  |артовксонть эйсте = 
  |важодема ёрокчизе     = [[Американь Вейтьсэндявкс Штаттнэ]]нь 44-це президентэсь
