Removing "Coat_of_arms_of_Rome.svg", it has been deleted from Commons by [[commons:User:Jcb|Jcb]] because: [[:c:COM:L|Copyright violation]]: Direct trace of copyrighted image shown at http://www.comune.roma.it/pcr/.

--- a/Рим_ош.mw
+++ b/Рим_ош.mw
@@ -5,7 +5,7 @@
  |изображение             = Collage Rome.jpg
  |подчинение              = Прявтош
  |мастор                  = Италия Мастор
- |герб                    = Coat of arms of Rome.svg
+ |герб                    =
  |коцт                    = Flag of Rome.svg 
  |описание герба          = 
  |описание флага          = 
